Added preliminary companies and portals operations.
